Fixing issue where overflow would extend the screen.

--- a/src/stylesheets/SearchResults.scss
+++ b/src/stylesheets/SearchResults.scss
@@ -1,5 +1,6 @@
 .search-results {
     z-index: 1;
+    overflow-y: scroll;
     position: absolute;
     height: 95%;
     width: 100%;
